--- a/style.css
+++ b/style.css
@@ -1,40 +1,248 @@
+@charset "utf-8";
+/***
+    The new CSS reset - version 1.8.5 (last updated 14.6.2023)
+    GitHub page: https://github.com/elad2412/the-new-css-reset
+***/
 
-:root{
-  --color-main: #000;
-  --color-alternative: #F1FAEE;
+/*
+    Remove all the styles of the "User-Agent-Stylesheet", except for the 'display' property
+    - The "symbol *" part is to solve Firefox SVG sprite bug
+    - The "html" attribute is exclud, because otherwise a bug in Chrome breaks the CSS hyphens property (https://github.com/elad2412/the-new-css-reset/issues/36)
+ */
+*:where(:not(html, iframe, canvas, img, svg, video, audio):not(svg *, symbol *)) {
+    all: unset;
+    display: revert;
 }
 
-body{
+/* Preferred box-sizing value */
+*,
+*::before,
+*::after {
+    box-sizing: border-box;
+}
+
+/* Reapply the pointer cursor for anchor tags */
+a, button {
+    cursor: revert;
+}
+
+/* Remove list styles (bullets/numbers) */
+ol, ul, menu {
+    list-style: none;
+}
+
+/* For images to not be able to exceed their container */
+img {
+    max-inline-size: 100%;
+    max-block-size: 100%;
+}
+
+/* removes spacing between cells in tables */
+table {
+    border-collapse: collapse;
+}
+
+/* Safari - solving issue when using user-select:none on the <body> text input doesn't working */
+input, textarea {
+    -webkit-user-select: auto;
+}
+
+/* revert the 'white-space' property for textarea elements on Safari */
+textarea {
+    white-space: revert;
+}
+
+/* minimum style to allow to style meter element */
+meter {
+    -webkit-appearance: revert;
+    appearance: revert;
+}
+
+/* preformatted text - use only for this feature */
+:where(pre) {
+    all: revert;
+}
+
+/* reset default text opacity of input placeholder */
+::placeholder {
+    color: unset;
+}
+
+/* remove default dot (•) sign */
+::marker {
+    content: initial;
+}
+
+/* fix the feature of 'hidden' attribute.
+   display:revert; revert to element instead of attribute */
+:where([hidden]) {
+    display: none;
+}
+
+/* revert for bug in Chromium browsers
+   - fix for the content editable attribute will work properly.
+   - webkit-user-select: auto; added for Safari in case of using user-select:none on wrapper element */
+:where([contenteditable]:not([contenteditable="false"])) {
+    -moz-user-modify: read-write;
+    -webkit-user-modify: read-write;
+    overflow-wrap: break-word;
+    -webkit-line-break: after-white-space;
+    -webkit-user-select: auto;
+}
+
+/* apply back the draggable feature - exist only in Chromium and Safari */
+:where([draggable="true"]) {
+    -webkit-user-drag: element;
+}
+
+/* Revert Modal native behavior */
+:where(dialog:modal) {
+    all: revert;
+}
+
+:root {
+  --color-main: #000;
+  --color-alternative: #f1faee;
+}
+
+body {
   background-color: var(--color-main);
   color: var(--color-alternative);
-  font-family: 'Inter', sans-serif;
+  font-family: "Inter", sans-serif;
 }
 
-.container{
+main{
+  width: 100%;
+  height: 100vh;
+  height: 100dvh;
+}
+
+.container {
   margin: 0 auto;
   width: 100%;
   max-width: 1280px;
+  height: 100%;
 
-  @media (max-width: calc(1280px + 10px) ) {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+
+  
+}
+
+@media (max-width: calc(1280px + 10px)) {
+  .container {
     max-width: calc(100% - 2.5rem);
   }
 }
 
+h1 {
+  font-size: 5.6875rem;
+  font-weight: normal;
+  line-height: 0.9;
+}
 
-h1{
+h2 {
   font-size: 5.6875rem;
   font-weight: normal;
 }
 
-h2{
-  font-size: 3.125rem;
-  font-weight: normal;
-}
-
-a{
+a {
   color: var(--color-alternative);
+  animation-name: out;
+  animation-duration: .25s;
+  animation-name: out-default;
+  animation-fill-mode: forwards;
+  background-image: linear-gradient(120deg,#fff,#fff);
+  background-repeat: no-repeat;
+  background-size: 0% 1px;
+  background-position: 0% calc(100% - 0px);
+  padding-bottom: 3px;
 }
 
-ul li{
+a:hover{
+  animation-name: in-default;
+}
+
+
+
+
+
+
+
+.profile_picture__container img {
+  border-radius: 100%;
+}
+
+
+/* HEADER */
+header{
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start; 
+  padding: 1rem 0;
+}
+
+.header__left{
+  display: flex;
+  align-items: flex-start; 
+  gap: 6rem;
+}
+
+/* SOCIAL LINKS */
+.social_links{
+  display: flex;
+  gap: 1rem;
+}
+
+ul li {
   list-style: none;
+}
+
+/* MAIN */
+
+.main__content {
+  display: flex;
+}
+
+
+/* FOOTER */
+footer{
+  display: flex;
+  align-items: center;
+  gap: 12%;
+  padding: 1rem 0;
+  flex-direction: row-reverse;
+}
+
+footer svg{
+  flex: none;
+}
+
+footer h2{
+}
+
+/* ANIMATION */
+@keyframes out-default {
+  0% {
+      background-size: 100% 1px;
+      background-position: 100% calc(100% - 0px)
+  }
+
+  to {
+      background-size: 0% 1px;
+      background-position: 100% calc(100% - 0px)
+  }
+}
+
+@keyframes in-default {
+  0% {
+      background-size: 0% 1px;
+      background-position: 0% calc(100% - 0px)
+  }
+
+  to {
+      background-size: 100% 1px;
+      background-position: 0% calc(100% - 0px)
+  }
 }
