--- a/style.css
+++ b/style.css
@@ -149,19 +149,25 @@ h2 {
 
 a {
   color: var(--color-alternative);
-  animation-name: out;
-  animation-duration: .25s;
-  animation-name: out-default;
-  animation-fill-mode: forwards;
+  /* animation-name: out; */
+  /* animation-duration: .25s; */
+  /* animation-name: out-default; */
+  
   background-image: linear-gradient(120deg,#fff,#fff);
   background-repeat: no-repeat;
   background-size: 0% 1px;
   background-position: 0% calc(100% - 0px);
   padding-bottom: 2px;
+  transition: background-size .25s ease-out, background-position .25s ease-out;
+  background-size: 0% 1px;
+  background-position: 0% calc(100% - 0px)
 }
 
 a:hover{
-  animation-name: in-default;
+  /* animation-name: in-default; */
+  /* animation-fill-mode: forwards; */
+  background-size: 100% 1px;
+  background-position: 0% calc(100% - 0px)
 }
 
 
